fixing safari alignment

--- a/CSS/contactme.css
+++ b/CSS/contactme.css
@@ -48,9 +48,11 @@
 }
 
 .socialmediaitemscontainer {
+    /*width: 100%;*/
     margin: 10px auto 0 auto;
     display: flex;
     flex-flow: row;
+    justify-content: center;
     font-family: Poiret One;
 }
 
